Fixed header with new font and spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -31,6 +31,7 @@
   font-size: 1.15rem;
   margin-bottom: 0.5rem;
   transition: 0.3s ease-in;
+  color: var(--text-secondary);
 }
 
 /* Copyright */
@@ -44,14 +45,17 @@
 .seperator {
   width: 100%;
   height: 2px;
+  border: none;
   margin-bottom: 0.75rem;
+  background-color: var(--text-secondary);
 }
 
 .bottomContainer {
+  gap: 1rem;
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .siteNavigation,
@@ -65,8 +69,8 @@
 /* Nav headers */
 .navHeader {
   font-weight: 500;
-  font-size: 1.25rem;
-  margin-bottom: 0.25rem;
+  font-size: 1.5rem;
+  font-family: "Oswald", sans-serif;
 }
 
 /* Nav items */
@@ -128,7 +132,7 @@
 /* Mobile responsiveness */
 @media (max-width: 480px) {
   .logoContainer img {
-    width: 175px;
+    width: 150px;
   }
 
   .legalDisclaimer {
@@ -138,5 +142,13 @@
   .copyright {
     width: 275px;
     margin: 0 auto;
+  }
+
+  .navHeader {
+    font-size: 1.15rem;
+  }
+
+  .navItems a {
+    font-size: 1rem;
   }
 }
